Fix JWT integration and resolve method mismatches